--- a/cdmcore.vcxproj
+++ b/cdmcore.vcxproj
@@ -11,9 +11,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{1B7220AD-0156-4667-A465-4C6FCF4A4687}</ProjectGuid>
+    <ProjectGuid>{BBB5049F-0AFD-4063-9373-78619CF9BFC4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>cdm</RootNamespace>
+    <ProjectName>cdmcore</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -23,7 +24,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -42,12 +43,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)bin\$(Configuration)\.console\</IntDir>
+    <IntDir>$(SolutionDir)bin\$(Configuration)\.core\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)bin\$(Configuration)\.console\</IntDir>
+    <IntDir>$(SolutionDir)bin\$(Configuration)\.core\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -56,17 +57,16 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>
-      </AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include/fftw3/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration)\.core</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(SolutionDir)bin\$(Configuration)\.core\*.obj;include\fftw3\libfftw3-3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>include\fftw3\libfftw3-3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy include\fftw3\*.dll bin\$(Configuration)\</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -78,23 +78,88 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)bin\$(Configuration)\.core</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include/fftw3/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>
-      </AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(SolutionDir)bin\$(Configuration)\.core\*.obj;include\fftw3\libfftw3-3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>include\fftw3\libfftw3-3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy include\fftw3\*.dll bin\$(Configuration)\</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cc" />
+    <ClInclude Include="analyze.h" />
+    <ClInclude Include="analyze_new.h" />
+    <ClInclude Include="avalanche.h" />
+    <ClInclude Include="dune_evolution.h" />
+    <ClInclude Include="evolution.h" />
+    <ClInclude Include="flux_stationary.h" />
+    <ClInclude Include="func.h" />
+    <ClInclude Include="globals.h" />
+    <ClInclude Include="utils.h" />
+    <ClInclude Include="influx.h" />
+    <ClInclude Include="initsurf.h" />
+    <ClInclude Include="initsurfalea.h" />
+    <ClInclude Include="initsurfbeach.h" />
+    <ClInclude Include="initsurfcone.h" />
+    <ClInclude Include="initsurfgauss.h" />
+    <ClInclude Include="initsurfmatlab.h" />
+    <ClInclude Include="initsurfparabol.h" />
+    <ClInclude Include="initsurfwaves.h" />
+    <ClInclude Include="iter_aval_new.h" />
+    <ClInclude Include="physics_const.h" />
+    <ClInclude Include="PTG_FileNames.h" />
+    <ClInclude Include="PTG_Func.h" />
+    <ClInclude Include="PTG_Func2d.h" />
+    <ClInclude Include="PTG_Func2dScalar.h" />
+    <ClInclude Include="PTG_Func2dVec.h" />
+    <ClInclude Include="rfftw12d.h" />
+    <ClInclude Include="rotatematrix.h" />
+    <ClInclude Include="save.h" />
+    <ClInclude Include="sepbubble.h" />
+    <ClInclude Include="shear.h" />
+    <ClInclude Include="shear_hlr.h" />
+    <ClInclude Include="shore.h" />
+    <ClInclude Include="vec.h" />
+    <ClInclude Include="vegetation.h" />
+    <ClInclude Include="wind.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="analyze.cc" />
+    <ClCompile Include="analyze_new.cc" />
+    <ClCompile Include="avalanche.cc" />
+    <ClCompile Include="dune_evolution.cc" />
+    <ClCompile Include="evolution.cc" />
+    <ClCompile Include="flux_stationary.cc" />
+    <ClCompile Include="func.cc" />
+    <ClCompile Include="globals.cc" />
+    <ClCompile Include="influx.cc" />
+    <ClCompile Include="initsurf.cc" />
+    <ClCompile Include="initsurfalea.cc" />
+    <ClCompile Include="initsurfbeach.cc" />
+    <ClCompile Include="initsurfcone.cc" />
+    <ClCompile Include="initsurfgauss.cc" />
+    <ClCompile Include="initsurfmatlab.cc" />
+    <ClCompile Include="initsurfparabol.cc" />
+    <ClCompile Include="initsurfwaves.cc" />
+    <ClCompile Include="iter_aval_new.cc" />
+    <ClCompile Include="PTG_Func2dScalar.cc" />
+    <ClCompile Include="PTG_Func2dVec.cc" />
+    <ClCompile Include="rfftw12d.cc" />
+    <ClCompile Include="rotatematrix.cc" />
+    <ClCompile Include="save.cc" />
+    <ClCompile Include="sepbubble.cc" />
+    <ClCompile Include="shear.cc" />
+    <ClCompile Include="shear_hlr.cc" />
+    <ClCompile Include="shore.cc" />
+    <ClCompile Include="utils.cc" />
+    <ClCompile Include="vegetation.cc" />
+    <ClCompile Include="wind.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
